--- a/logger/templates/logger/404.html
+++ b/logger/templates/logger/404.html
@@ -1,5 +1,3 @@
-{% extends "logger/layout.html" %}
-
-{% block body %}
-    <h1 style="text-align: center;">Page Not Found (404)</h1>
+{% extends "logger/layout.html" %} {% block body %}
+<h1 style="text-align: center">Page Not Found (404)</h1>
 {% endblock %}
