--- a/logger/templates/logger/layout.html
+++ b/logger/templates/logger/layout.html
@@ -20,8 +20,7 @@
     />
   </head>
   <body>
-    {% block body %} {% endblock %} {#
+    {% block body %} {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.js"></script>
-    #}
   </body>
 </html>
